# arkiv

./: .env.example  .gitignore  Cargo.toml  config.yml
arkiv/: Cargo.toml
arkiv/src/: archiver.rs  main.rs
arkiv_storage/: Cargo.toml
arkiv_storage/src/: lib.rs  local.rs
boardarchiver/: Cargo.toml
boardarchiver/src/: archiver.rs  config.rs
boardarchiver/src/storage/: local.rs  mod.rs
fourchan/: Cargo.toml
fourchan/src/: board.rs  client.rs  lib.rs  post.rs  thread.rs
migrations/: 20220201143524_add_posts_table.up.sql  20220519062946_full_text_search.down.sql  20220519062946_full_text_search.up.sql
web/: Cargo.toml
web/src/: error.rs  main.rs  util.rs
web/src/handler/: board.rs  cdn.rs  index.rs  mod.rs  thread.rs
web/templates/: base.html  board.html  index.html  thread.html
