[package]
name = "boardarchiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fourchan = { path = "../fourchan", version = "0.1.0"}
tokio = { version = "1", features = ["rt", "fs", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "*"
async-trait = "0.1"
bytes = "1"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
serde_yaml = "0.8.23"
http = "0.2.7"
regex = "1.5.6"
scraper = "0.13.0"
