[package]
name = "fourchan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
anyhow = "*"
bytes = "1"
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.7"

